# memory_manager

./: Allocator  Allocator.cbp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  SampleOutput.txt  cmake_clean  cmake_install.cmake  gmon.out  mapInput.txt  test1  test1.cpp
hdr/: block.h  heap.h  mem_exception.h  memlib.h  mm.h  my_alloc.h  thread_safe_mm.h
src/: heap.cpp  heap.cpp~  main.cpp  mm.cpp  my_alloc.cpp  test.cpp  test.cpp~  thread_safe_mm.cpp
tests/: macro.h  test1.h  test2.h
traces/: task-bal.rep~
